PROJECT( Link_list_Driver )
ENABLE_LANGUAGE(Fortran)

# --------------------------  define sources ----------------------------------

file( GLOB Driver_FILES            "test_link.f90"  )

#==============================================================================

SET ( Driver_SRCS            ${Driver_FILES}             )

#==============================================================================
#------------------------------------------------------------------------------

# ------------------------  add source codes ----------------------------------
ADD_EXECUTABLE ( linklist_driver ${Driver_SRCS} )

#==============================================================================
#------------------------------------------------------------------------------


# -------------------------------  LINK ---------------------------------------
#==============================================================================

TARGET_LINK_LIBRARIES ( linklist_driver linklist ${THIS_LINK_LIBS} )

#==============================================================================

#---------------------------  CONFIGURE INSTALL -------------------------------
#==============================================================================

INSTALL ( TARGETS linklist_driver
          RUNTIME DESTINATION bin
          LIBRARY DESTINATION lib
          ARCHIVE DESTINATION lib/static
        )

#==============================================================================
#------------------------------------------------------------------------------

